<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@id/drawer_view2"
    android:background="@drawable/landingbg"
    tools:context=".LobbyAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoImg"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                app:srcCompat="@drawable/logo"
                tools:layout_editor_absoluteX="58dp"
                tools:layout_editor_absoluteY="104dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="35dp"
                android:layout_marginStart="25dp"
                android:padding="5dp"
                android:fontFamily="@font/bangers"
                android:text="Account Page"
                android:textAlignment="center"
                android:textColor="#CDC300"
                android:textSize="25sp"/>

            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="41dp"
                android:layout_height="38dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_baseline_settings_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="100dp">

            <FrameLayout
                android:id="@+id/updateFrame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logoImg">

                <ImageButton
                    android:id="@+id/updateButton"
                    android:layout_width="175dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_theaters_24"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:layout_gravity="center"
                    android:text="Update"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logoImg">

                <ImageButton
                    android:id="@+id/deleteButton"
                    android:layout_width="175dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_theaters_24"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:layout_gravity="center"
                    android:text="Delete"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/updateFrame">

                <ImageButton
                    android:id="@+id/logoutButton"
                    android:layout_width="175dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_theaters_24"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:layout_gravity="center"
                    android:text="Logout"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawer_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>